<resources>
    <string name="app_name">Initiative Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="combat_host_fragment">Combat Host Fragment</string>
    <string name="combat_client_fragment">Combat Client Fragment</string>
    <string name="new_button_content_description">Add a new combatant to the initiative order</string>
    <string name="edit_button_content_description">Button to edit the entry.</string>
    <string name="initiative_edit_hint">Initiative</string>
    <string name="name_edit_hint">The name of this creature.</string>
    <string name="cancel_text">Cancel</string>
    <string name="save_text">Save</string>
    <string name="prev_button_content_description">Return to previous in initiative.</string>
    <string name="next_button_content_description">Go to next in initiative.</string>
    <string name="leave_shared_combat">Leave shared Combat</string>
    <string name="share_combat">Share Combat</string>
    <string name="join_combat">Join Combat</string>
    <string name="stop_sharing">Stop sharing</string>
    <string name="show_session_id">Show Session Id</string>
    <string name="leave_combat">Leave Combat</string>
    <string name="join_combat_as_host">Join combat as host</string>
    <string name="characters">Characters</string>
</resources>