<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.lehrbaum.initiativetracker.view.MainActivity">
    <item
        android:id="@+id/action_share"
        android:orderInCategory="1"
        android:title="@string/share_combat"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_join_as_host"
        android:orderInCategory="1"
        android:title="@string/join_combat_as_host"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_session_id"
        android:orderInCategory="2"
        android:title="@string/show_session_id"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_stop_sharing"
        android:orderInCategory="2"
        android:title="@string/stop_sharing"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_join_combat"
        android:orderInCategory="20"
        android:title="@string/join_combat"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_characters"
        android:orderInCategory="40"
        android:title="@string/characters"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_start_combat"
        android:title="Start Combat"
        android:icon="@android:drawable/ic_media_play"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_prev_combatant"
        android:title="Previous Combatant"
        android:icon="@android:drawable/ic_media_rew"
        app:showAsAction="ifRoom" />

</menu>
