<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="android.R" />

        <variable
            name="viewModel"
            type="de.lehrbaum.initiativetracker.view.CombatantViewModel" />
    </data>

    <FrameLayout
        is_activated="@{viewModel.active}"
        is_selected="@{viewModel.editMode}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/initiative_item_background">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/standard_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/name_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:layout_weight="1"
                    android:text="@{viewModel.name}"
                    android:textAppearance="?attr/textAppearanceListItem"
                    tools:text="Skeleton" />

                <TextView
                    android:id="@+id/initiative_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@{viewModel.initiativeString}"
                    android:textAppearance="?attr/textAppearanceListItem"
                    tools:text="10" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/edit_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            tools:visibility="gone">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_edit_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/name_edit"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin"
                        android:autofillHints="name"
                        android:hint="@string/name_edit_hint"
                        android:inputType="textPersonName"
                        android:minWidth="@dimen/min_control_size"
                        android:minHeight="@dimen/min_control_size"
                        android:selectAllOnFocus="true"
                        android:text="@{viewModel.name}"
                        android:textAppearance="?attr/textAppearanceListItem"
                        app:layout_constraintEnd_toStartOf="@+id/initiative_edit"
                        tools:ignore="DuplicateSpeakableTextCheck"
                        tools:text="Skeleton" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/initiative_edit_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="100dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/initiative_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin"
                        android:autofillHints="no"
                        android:hint="@string/initiative_edit_hint"
                        android:inputType="numberSigned"
                        android:maxWidth="@dimen/min_control_size"
                        android:minWidth="@dimen/min_control_size"
                        android:minHeight="@dimen/min_control_size"
                        android:selectAllOnFocus="true"
                        android:text="@{viewModel.initiativeString}"
                        android:textAppearance="?attr/textAppearanceListItem"
                        app:layout_constraintBottom_toBottomOf="@+id/name_edit_layout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/name_edit_layout"
                        tools:ignore="DuplicateSpeakableTextCheck"
                        tools:text="10" />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="@dimen/min_control_size"
                    android:minHeight="@dimen/min_control_size"
                    android:text="@string/cancel_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/save_button"
                    app:layout_constraintTop_toBottomOf="@+id/name_edit_layout" />

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="@dimen/min_control_size"
                    android:minHeight="@dimen/min_control_size"
                    android:text="@string/save_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/cancel_button"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_edit_layout" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </FrameLayout>

</layout>
